# rocket-test

./: Cargo.toml  docker-compose.yml
migrations/: 20230428125547_create_test_table.sql  20230428144351_create_message_table.sql
src/: main.rs
static/: index.html  script.js
