[package]
name = "rocket-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
dotenvy = "0.15.7"
rocket = { version = "0.5.0-rc.3", features = ["json"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres", "time"] }
time = { version = "0.3.20", features = ["serde"] }
